--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,11 +72,51 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5a77a67b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "productos = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "def inventario_inicial(productos):\n",
+    "    inventario = {}\n",
+    "    for producto in productos:\n",
+    "        cantidad_valida = False\n",
+    "        while not cantidad_valida:  \n",
+    "            try:\n",
+    "                cantidades_producto = int(input(f\"Ingrese la cantidad inicial de {producto}: \"))\n",
+    "                if cantidades_producto < 0:\n",
+    "                    print(\"Por favor, ingrese un número entero no negativo.\")\n",
+    "                else:\n",
+    "                    cantidad_valida = True\n",
+    "                    return inventario\n",
+    "            except ValueError:\n",
+    "                print(\"Ha ocurrido un error. Por favor, ingrese un número entero.\")\n",
+    "            finally:\n",
+    "                inventario[producto] = cantidades_producto\n",
+    "                print (f\"Inventario inicial de {producto}: {cantidades_producto} unidades.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2c78c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def precio_total (orden_cliente1, precios):\n",
+    "    for producto, cantidad in orden_cliente1.items():\n",
+    "        total += precios[producto] * cantidad\n",
+    "    return total"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
