--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "5a77a67b",
    "metadata": {},
    "outputs": [],
@@ -85,19 +85,18 @@
     "    inventario = {}\n",
     "    for producto in productos:\n",
     "        cantidad_valida = False\n",
-    "        while not cantidad_valida:  \n",
+    "        while not cantidad_valida:\n",
     "            try:\n",
     "                cantidades_producto = int(input(f\"Ingrese la cantidad inicial de {producto}: \"))\n",
     "                if cantidades_producto < 0:\n",
     "                    print(\"Por favor, ingrese un número entero no negativo.\")\n",
     "                else:\n",
+    "                    inventario[producto] = cantidades_producto\n",
     "                    cantidad_valida = True\n",
-    "                    return inventario\n",
     "            except ValueError:\n",
     "                print(\"Ha ocurrido un error. Por favor, ingrese un número entero.\")\n",
-    "            finally:\n",
-    "                inventario[producto] = cantidades_producto\n",
-    "                print (f\"Inventario inicial de {producto}: {cantidades_producto} unidades.\")"
+    "        print(f\"Inventario inicial de {producto}: {inventario[producto]} unidades.\")\n",
+    "    return inventario"
    ]
   },
   {
@@ -105,12 +104,31 @@
    "execution_count": null,
    "id": "c2c78c2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 5 (2439093952.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn precio_unitario[producto] * cantidad\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 5\n"
+     ]
+    }
+   ],
    "source": [
-    "def precio_total (orden_cliente1, precios):\n",
+    "\n",
+    "try:\n",
     "    for producto, cantidad in orden_cliente1.items():\n",
-    "        total += precios[producto] * cantidad\n",
-    "    return total"
+    "        if precio_unitario >  0:\n",
+    "            return precio_unitario[producto] * cantidad\n",
+    "except ValueError:\n",
+    "        print(\"Ha ocurrido un error. El precio unitario debe ser un número entero no negativo.\")\n",
+    "except TypeError:\n",
+    "        print(\"Ha ocurrido un error. El precio unitario debe ser un número entero.\")\n",
+    "finally:\n",
+    "        print(\"Cálculo de precio total finalizado.\")\n",
+    "        precio_total = sum(precio_unitario.values())\n",
+    "       \n",
+    "print (f\"El precio total de la orden es: ${precio_total}\")"
    ]
   }
  ],
