--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "5a77a67b",
    "metadata": {},
    "outputs": [],
@@ -101,34 +101,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c2c78c2c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 5 (2439093952.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn precio_unitario[producto] * cantidad\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "try:\n",
-    "    for producto, cantidad in orden_cliente1.items():\n",
-    "        if precio_unitario >  0:\n",
-    "            return precio_unitario[producto] * cantidad\n",
-    "except ValueError:\n",
-    "        print(\"Ha ocurrido un error. El precio unitario debe ser un número entero no negativo.\")\n",
-    "except TypeError:\n",
-    "        print(\"Ha ocurrido un error. El precio unitario debe ser un número entero.\")\n",
-    "finally:\n",
-    "        print(\"Cálculo de precio total finalizado.\")\n",
-    "        precio_total = sum(precio_unitario.values())\n",
-    "       \n",
-    "print (f\"El precio total de la orden es: ${precio_total}\")"
+    "def calcular_precio_total (orden_cliente1):\n",
+    "    precio_total = 0\n",
+    "    for item in orden_cliente1:\n",
+    "        try:\n",
+    "            precio_total += item['precio'] * item['cantidad']\n",
+    "        except KeyError as e:\n",
+    "            print(f\"Error: falta la clave {e} en el ítem {item}.\")\n",
+    "        except TypeError:\n",
+    "            print(f\"Error: el ítem {item} no es un diccionario válido.\")\n",
+    "    return precio_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8b5bb496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obtener_orden_cliente ():\n",
+    "    orden_cliente = set ()\n",
+    "    try:\n",
+    "        producto = input(\"Ingrese el nombre del producto que desea comprar (o 'fin' para terminar): \")\n",
+    "    except ListwrongType as e:\n",
+    "        print(f\"Error: {e}. Por favor, ingrese un nombre de producto válido.\")\n",
+    "    except:\n",
+    "        print (\"Ha ocurrido un error inesperado. Por favor, intente nuevamente.\")\n",
+    "    finally:\n",
+    "        print(\"Gracias por utilizar nuestro sistema de pedidos.\")"
    ]
   }
  ],
