--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "5a77a67b",
    "metadata": {},
    "outputs": [],
@@ -101,41 +101,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c2c78c2c",
+   "execution_count": 43,
+   "id": "450ff0d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventario inicial de t-shirts: 4 unidades.\n",
+      "Por favor, ingrese un número entero no negativo.\n",
+      "Inventario inicial de mugs: 2 unidades.\n",
+      "Ha ocurrido un error. Por favor, ingrese un número entero.\n",
+      "Inventario inicial de hats: 5 unidades.\n",
+      "Inventario inicial de books: 10 unidades.\n",
+      "Ha ocurrido un error. Por favor, ingrese un número entero.\n",
+      "Inventario inicial de keychains: 1 unidades.\n",
+      "Inventario inicial completo: {'t-shirts': 4, 'mugs': 2, 'hats': 5, 'books': 10, 'keychains': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "def calcular_precio_total (orden_cliente1):\n",
-    "    precio_total = 0\n",
-    "    for item in orden_cliente1:\n",
-    "        try:\n",
-    "            precio_total += item['precio'] * item['cantidad']\n",
-    "        except KeyError as e:\n",
-    "            print(f\"Error: falta la clave {e} en el ítem {item}.\")\n",
-    "        except TypeError:\n",
-    "            print(f\"Error: el ítem {item} no es un diccionario válido.\")\n",
-    "    return precio_total"
+    "productos = [\"t-shirts\", \"mugs\", \"hats\", \"books\", \"keychains\"]\n",
+    "inventario = inventario_inicial(productos)\n",
+    "print(\"Inventario inicial completo:\", inventario)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "c2c78c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_precio_total(productos):\n",
+    "    total = 0\n",
+    "    for producto in productos:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                precio = float(input(f\"Ingrese el precio de {producto}: \"))\n",
+    "                if precio < 0:\n",
+    "                    print(\"El precio no puede ser negativo.\")\n",
+    "                else:\n",
+    "                    total += precio\n",
+    "                    break\n",
+    "            except ValueError:\n",
+    "                print(\"Por favor, ingrese un precio válido.\")\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "02ac22dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "calcular_precio_total() missing 1 required positional argument: 'precios'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m orden_cliente1 = {\n\u001b[32m      2\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mt-shirts\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m,\n\u001b[32m      3\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmugs\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m1\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m      6\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mkeychains\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m4\u001b[39m\n\u001b[32m      7\u001b[39m }\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m total_orden1 = \u001b[43mcalcular_precio_total\u001b[49m\u001b[43m(\u001b[49m\u001b[43morden_cliente1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEl precio total de la orden del cliente 1 es: $\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_orden1\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: calcular_precio_total() missing 1 required positional argument: 'precios'"
+     ]
+    }
+   ],
+   "source": [
+    "orden_cliente1 = {\n",
+    "    \"t-shirts\": 2,\n",
+    "    \"mugs\": 1,\n",
+    "    \"hats\": 3,\n",
+    "    \"books\": 1,\n",
+    "    \"keychains\": 4\n",
+    "}\n",
+    "total_orden1 = calcular_precio_total(orden_cliente1.keys())\n",
+    "print(f\"El precio total de la orden del cliente 1 es: ${total_orden1:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "8b5bb496",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obtener_orden_cliente ():\n",
-    "    orden_cliente = set ()\n",
-    "    try:\n",
-    "        producto = input(\"Ingrese el nombre del producto que desea comprar (o 'fin' para terminar): \")\n",
-    "    except ListwrongType as e:\n",
-    "        print(f\"Error: {e}. Por favor, ingrese un nombre de producto válido.\")\n",
-    "    except:\n",
-    "        print (\"Ha ocurrido un error inesperado. Por favor, intente nuevamente.\")\n",
-    "    finally:\n",
-    "        print(\"Gracias por utilizar nuestro sistema de pedidos.\")"
+    "def obtener_orden_cliente (inventario):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num = int(input(\"¿Cuántos pedidos desea realizar?: \"))\n",
+    "            if num < 0:\n",
+    "                print(\"Debe ingresar un número no negativo.\")\n",
+    "            else:\n",
+    "                break\n",
+    "        except ValueError:\n",
+    "            print(\"Ingrese un número válido.\")\n",
+    "    pedidos = set()\n",
+    "    for _ in range(num):\n",
+    "        while True:\n",
+    "            producto = input(\"Producto: \")\n",
+    "            try:\n",
+    "                if producto in inventario and inventario[producto] > 0:\n",
+    "                    pedidos.add(producto)\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print(\"Producto no válido o sin stock.\")\n",
+    "            except:\n",
+    "                print(\"Error. Ingrese un producto válido.\")\n",
+    "    return pedidos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c7d17c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
